Updated reports for Telugu

--- a/reports/mono-1.2/HPLT-v1.2-te.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-te.yaml
@@ -302,8 +302,7 @@ docs_wds: '[[0.0, 23992], [0.1, 909], [0.2, 698], [0.3, 657], [0.4, 624], [0.5, 
   [8.4, 6959], [8.5, 6630], [8.6, 6167], [8.7, 6004], [8.8, 5584], [8.9, 4596], [9.0,
   3938], [9.1, 3457], [9.2, 2892], [9.3, 2511], [9.4, 1946], [9.5, 1559], [9.6, 1247],
   [9.7, 801], [9.8, 447], [9.9, 175], [10.0, 34]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 19576931, "no_urls": 690409,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 183582, "not_too_short": 19575934, "no_urls": 692667, "no_bad_encoding": 1278}'
 monocleaner_scores: '[[0.0, 1767411], [0.1, 820730], [0.2, 1678741], [0.3, 3424189],
   [0.4, 6722833], [0.5, 10438248], [0.6, 12323684], [0.7, 11445760], [0.8, 2427348],
   [0.9, 92465]]'
