Updated reports for Georgian

--- a/reports/mono-1.2/HPLT-v1.2-ka.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ka.yaml
@@ -330,8 +330,7 @@ docs_wds: '[[0.0, 19286], [0.1, 1280], [0.2, 1402], [0.3, 1767], [0.4, 2478], [0
   12070], [8.3, 11326], [8.4, 10678], [8.5, 10203], [8.6, 10052], [8.7, 9607], [8.8,
   9256], [8.9, 8896], [9.0, 8429], [9.1, 7660], [9.2, 6908], [9.3, 6340], [9.4, 5643],
   [9.5, 5001], [9.6, 4364], [9.7, 3303], [9.8, 2246], [9.9, 919], [10.0, 323]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 31805487, "no_urls": 1192541,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 443193, "not_too_short": 31804307, "no_urls": 1194941, "no_bad_encoding": 490}'
 monocleaner_scores: '[[0.0, 5574252], [0.1, 1751136], [0.2, 2402734], [0.3, 3389726],
   [0.4, 4578330], [0.5, 6105946], [0.6, 7712827], [0.7, 10531509], [0.8, 13298327],
   [0.9, 10179497]]'
