--- a/reports/mono-1.2/HPLT-v1.2-kn.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-kn.yaml
@@ -247,8 +247,7 @@ docs_wds: '[[0.0, 14503], [0.1, 462], [0.2, 630], [0.3, 812], [0.4, 1060], [0.5,
   2969], [8.7, 2729], [8.8, 2588], [8.9, 2401], [9.0, 2229], [9.1, 1860], [9.2, 1705],
   [9.3, 1407], [9.4, 1156], [9.5, 894], [9.6, 781], [9.7, 520], [9.8, 336], [9.9,
   138], [10.0, 31]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 13290185, "no_urls": 368440,
-  "no_bad_encoding": 2924}'
+hardrules_tags: '{"not_too_long": 99861, "not_too_short": 13290931, "no_urls": 368450, "no_bad_encoding": 1788}'
 monocleaner_scores: '[[0.0, 1447596], [0.1, 554903], [0.2, 1082059], [0.3, 1803599],
   [0.4, 2756304], [0.5, 4226292], [0.6, 5074143], [0.7, 5468259], [0.8, 5165049],
   [0.9, 1663128]]'
