--- a/reports/mono-2.0/HPLT-v2-ace_Arab.yaml
+++ b/reports/mono-2.0/HPLT-v2-ace_Arab.yaml
@@ -5,7 +5,7 @@ docs_segments: '[[1, 3], [2, 3], [4, 1], [5, 2], [7, 1], [9, 2], [11, 2], [23, 1
   [24, 1]]'
 docs_segments_mean: 7
 docs_segments_median: 5
-docs_timestamp: 1731338479.5809524
+docs_timestamp: 1733223025.8173504
 docs_top100_domains: '[["iran-eng.ir", 4], ["blogspot.com", 2], ["bayardserviceweb.com",
   1], ["utusanmelayu.com.my", 1], ["office-converter.com", 1], ["salemalanzi.sa",
   1], ["onlineyoutube.com", 1], ["all.biz", 1], ["blogspot.it", 1], ["blogspot.my",
@@ -17,7 +17,7 @@ docs_warnings: []
 docs_wds: '[[5, 2], [5.1, 3], [6, 2], [6.8, 1], [6.9, 4], [7, 2], [7.5, 1], [8.5,
   1]]'
 corpus: ace_Arab.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 10, "no_urls": 0, "no_bad_encoding":
+hardrules_tags: '{"not_too_long": 9, "not_too_short": 11, "no_urls": 0, "no_bad_encoding":
   0, "pii": 1}'
 sentence_pairs: 117
 src_bytes: 84.34 KB
@@ -38,8 +38,30 @@ src_unique_sents: '[[1, 3], [2, 5], [3, 8], [4, 14], [5, 5], [6, 17], [8, 5], [1
   1], [63, 1], [85, 1], [89, 1], [176, 1], [611, 1], [686, 1], [765, 1], [777, 1],
   [1530, 1], [2982, 1]]'
 srclang: ace
-timestamp: 1731338489.331669
+timestamp: 1733223033.566601
 unique_sents: 93
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
+src_ngrams: '{"1": [[["\u0643\u0646"], 1683], [["\u0645\u062f\u0648\u0646"], 1680],
+  [["\u0643\u062c\u0627\u0633"], 1530], [["\u062e\u0648\u0646\u062a\u0648\u0646"],
+  1530], [["\u0627\u0648\u0643"], 756]], "2": [[["\u0645\u062f\u0648\u0646 \u0643\u0646"],
+  1676], [["\u0643\u0646 \u0645\u062f\u0648\u0646"], 1673], [["\u062e\u0648\u0646\u062a\u0648\u0646
+  \u0643\u062c\u0627\u0633"], 1530], [["\u0627\u0648\u0643 \u0627\u0648\u0643"], 755],
+  [["\u0644 ppm"], 336]], "3": [[["\u0643\u0646 \u0645\u062f\u0648\u0646 \u0643\u0646"],
+  1670], [["\u0645\u062f\u0648\u0646 \u0643\u0646 \u0645\u062f\u0648\u0646"], 1666],
+  [["\u0627\u0648\u0643 \u0627\u0648\u0643 \u0627\u0648\u0643"], 754], [["\u0647\u064a\u0648\u0646\u062f\u0627\u064a
+  \u062c\u064a\u0646\u064a\u0633\u064a\u0633 \u0643\u0648\u0628\u064a\u0647"], 56],
+  [["\u0686\u062a \u0627\u0632\u064a\u062a\u0627\u0627\u0632\u064a\u062a\u0627 \u0686\u062a"],
+  24]], "4": [[["\u0645\u062f\u0648\u0646 \u0643\u0646 \u0645\u062f\u0648\u0646 \u0643\u0646"],
+  1665], [["\u0643\u0646 \u0645\u062f\u0648\u0646 \u0643\u0646 \u0645\u062f\u0648\u0646"],
+  1660], [["\u0627\u0648\u0643 \u0627\u0648\u0643 \u0627\u0648\u0643 \u0627\u0648\u0643"],
+  753], [["\u0633\u0639\u0631 \u0647\u064a\u0648\u0646\u062f\u0627\u064a \u062c\u064a\u0646\u064a\u0633\u064a\u0633
+  \u0643\u0648\u0628\u064a\u0647"], 13], [["\u06a4\u0648\u0631\u062a\u0644 \u0627\u064a\u0646
+  \u0627\u06a9\u0646 \u062f\u0627\u06a4\u062a"], 8]], "5": [[["\u0643\u0646 \u0645\u062f\u0648\u0646
+  \u0643\u0646 \u0645\u062f\u0648\u0646 \u0643\u0646"], 1659], [["\u0645\u062f\u0648\u0646
+  \u0643\u0646 \u0645\u062f\u0648\u0646 \u0643\u0646 \u0645\u062f\u0648\u0646"], 1655],
+  [["\u0627\u0648\u0643 \u0627\u0648\u0643 \u0627\u0648\u0643 \u0627\u0648\u0643 \u0627\u0648\u0643"],
+  752], [["\u0645\u062f\u0648\u0646\u0643\u0646 \u0645\u062f\u0648\u0646 \u0643\u0646
+  \u0645\u062f\u0648\u0646 \u0643\u0646"], 6], [["\u0645\u062f\u0648\u0646 \u0643\u0646
+  \u0645\u062f\u0648\u0646\u0643\u0646 \u0645\u062f\u0648\u0646 \u0643\u0646"], 6]]}'
