--- a/reports/mono-2.0/HPLT-v2-kas_Arab.yaml
+++ b/reports/mono-2.0/HPLT-v2-kas_Arab.yaml
@@ -18,7 +18,7 @@ docs_segments: '[[1, 3], [2, 12], [3, 28], [4, 39], [5, 35], [6, 41], [7, 44], [
   [239, 1], [287, 1], [297, 1], [298, 2], [354, 1], [380, 1], [417, 1], [521, 2]]'
 docs_segments_mean: 29
 docs_segments_median: 16
-docs_timestamp: 1730708235.728322
+docs_timestamp: 1733223606.0907197
 docs_top100_domains: '[["muneeburrahman.com", 302], ["neabmagazine.com", 254], ["wikipedia.org",
   157], ["neabinternational.org", 52], ["wiktionary.org", 45], ["newschecker.in",
   29], ["gotquestions.org", 24], ["vikaspedia.in", 19], ["aminkamil.blog", 17], ["koshurakhbar.com",
@@ -41,7 +41,7 @@ docs_wds: '[[5, 14], [5.1, 6], [5.3, 10], [5.4, 3], [5.5, 8], [5.6, 8], [5.7, 6]
   6], [8.9, 21], [9, 27], [9.1, 22], [9.2, 26], [9.3, 23], [9.4, 22], [9.5, 19], [9.6,
   12], [9.7, 11], [9.8, 15], [9.9, 3]]'
 corpus: kas_Arab.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 1320, "no_urls": 44, "no_bad_encoding":
+hardrules_tags: '{"not_too_long": 350, "not_too_short": 3007, "no_urls": 58, "no_bad_encoding":
   0, "pii": 1}'
 sentence_pairs: 27108
 src_bytes: 5.87 MB
@@ -138,8 +138,29 @@ src_unique_sents: '[[1, 199], [2, 297], [3, 383], [4, 808], [5, 917], [6, 923], 
   1], [442, 1], [452, 1], [489, 1], [530, 1], [536, 1], [541, 1], [651, 1], [654,
   1], [686, 1], [910, 1], [971, 1], [2919, 1], [2965, 1], [3083, 1]]'
 srclang: ks
-timestamp: 1730708267.540881
+timestamp: 1733223638.079764
 unique_sents: 11770
 warnings:
 - src_fasttext
-- src_ngrams_ks_nostopwords
+src_ngrams: '{"1": [[["\u062a\u06c1"], 14742], [["\u0686\u06be\u06c1"], 14677], [["\u0645\u0646\u0632"],
+  12340], [["\u06cc\u06c1"], 7439], [["\u0646\u06c1"], 7036]], "2": [[["\u0628\u0646\u0631
+  \u0641\u0644\u06a9\u0633"], 5864], [["\u0641\u0644\u06a9\u0633 \u0628\u0646\u0631"],
+  5842], [["\u0686\u06be\u06c1 \u0646\u06c1"], 1824], [["\u0645\u0646\u0632 \u0686\u06be\u06c1"],
+  1306], [["\u0686\u06be\u06cc\u06c1 \u0646\u06c1"], 699]], "3": [[["\u0628\u0646\u0631
+  \u0641\u0644\u06a9\u0633 \u0628\u0646\u0631"], 5840], [["\u0641\u0644\u06a9\u0633
+  \u0628\u0646\u0631 \u0641\u0644\u06a9\u0633"], 5838], [["\u0627\u064e\u0648\u064e\u0644\u06cc
+  \u06c1\u0650\u0646\u062f \u06cc\u0648\u0657\u0631\u064e\u067e\u06cc"], 235], [["\u0645\u0646\u0632
+  \u0686\u06be\u06c1 \u0646\u06c1"], 194], [["\u062a\u0645 \u062a\u0645 \u062a\u0645"],
+  176]], "4": [[["\u0628\u0646\u0631 \u0641\u0644\u06a9\u0633 \u0628\u0646\u0631 \u0641\u0644\u06a9\u0633"],
+  5836], [["\u0641\u0644\u06a9\u0633 \u0628\u0646\u0631 \u0641\u0644\u06a9\u0633 \u0628\u0646\u0631"],
+  5828], [["\u062a\u0645 \u062a\u0645 \u062a\u0645 \u062a\u0645"], 173], [["\u06c1\u0650\u0646\u062f
+  \u06cc\u0648\u0657\u0631\u064e\u067e\u06cc \u067e\u0620\u0679\u06be\u0655 \u0622\u0645\u0655\u062a\u0620"],
+  127], [["\u0627\u064e\u0648\u064e\u0644\u06cc \u06c1\u0650\u0646\u062f \u06cc\u0648\u0657\u0631\u064e\u067e\u06cc
+  \u067e\u0620\u0679\u06be\u0655"], 121]], "5": [[["\u0628\u0646\u0631 \u0641\u0644\u06a9\u0633
+  \u0628\u0646\u0631 \u0641\u0644\u06a9\u0633 \u0628\u0646\u0631"], 5826], [["\u0641\u0644\u06a9\u0633
+  \u0628\u0646\u0631 \u0641\u0644\u06a9\u0633 \u0628\u0646\u0631 \u0641\u0644\u06a9\u0633"],
+  5824], [["\u062a\u0645 \u062a\u0645 \u062a\u0645 \u062a\u0645 \u062a\u0645"], 171],
+  [["\u0627\u064e\u0648\u064e\u0644\u06cc \u06c1\u0650\u0646\u062f \u06cc\u0648\u0657\u0631\u064e\u067e\u06cc
+  \u067e\u0620\u0679\u06be\u0655 \u0622\u0645\u0655\u062a\u0620"], 121], [["\u06a9\u0631\u0646\u0633
+  \u0645\u0646\u0632 \u062d\u062f\u06c1 \u0631\u0648\u065a\u0633 \u062e\u0648\u0634\u06cc\u06d4"],
+  65]]}'
