--- a/reports/mono-2.0/HPLT-v2-lin_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-lin_Latn.yaml
@@ -33,7 +33,7 @@ docs_segments: '[[1, 129], [2, 126], [3, 259], [4, 632], [5, 251], [6, 355], [7,
   1], [1615, 1], [2344, 1], [2634, 1]]'
 docs_segments_mean: 26
 docs_segments_median: 14
-docs_timestamp: 1731325630.6411324
+docs_timestamp: 1733256380.32022
 docs_top100_domains: '[["jw.org", 2063], ["wikipedia.org", 1104], ["voalingala.com",
   751], ["mbokamosika.com", 602], ["lds.org", 262], ["skyrock.com", 232], ["senemongaba.com",
   225], ["migraweb.ch", 120], ["congomikili.com", 117], ["voiceofcongo.net", 110],
@@ -81,7 +81,7 @@ docs_wds: '[[5, 147], [5.1, 130], [5.2, 154], [5.3, 127], [5.4, 154], [5.5, 127]
   [9.1, 112], [9.2, 81], [9.3, 66], [9.4, 65], [9.5, 65], [9.6, 70], [9.7, 70], [9.8,
   33], [9.9, 28], [10, 2]]'
 corpus: lin_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 9969, "no_urls": 1249, "no_bad_encoding":
+hardrules_tags: '{"not_too_long": 3113, "not_too_short": 27560, "no_urls": 1633, "no_bad_encoding":
   36, "pii": 80}'
 sentence_pairs: 200341
 src_bytes: 31.86 MB
@@ -339,9 +339,18 @@ src_unique_sents: '[[0, 1], [1, 1914], [2, 2958], [3, 3339], [4, 4065], [5, 4555
   1], [1832, 1], [1838, 1], [1844, 2], [1852, 1], [1865, 1], [2020, 1], [2040, 1],
   [2162, 1], [2488, 1], [2796, 1], [2944, 1], [3335, 1]]'
 srclang: ln
-timestamp: 1731325769.076757
+timestamp: 1733256485.0734234
 unique_sents: 111837
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_ln_nostopwords
+src_ngrams: '{"1": [[["oyo"], 97488], [["ye"], 71155], [["ba"], 62874], [["ezali"],
+  38830], [["yo"], 37536]], "2": [[["bisou bisou"], 11642], [["oyo ezali"], 6052],
+  [["makambo oyo"], 3825], [["nyonso oyo"], 3369], [["de la"], 3299]], "3": [[["bisou
+  bisou bisou"], 10863], [["batatoli ya yehova"], 1693], [["ndenge na ndenge"], 966],
+  [["bokonzi ya nzambe"], 916], [["mwana na ye"], 870]], "4": [[["bisou bisou bisou
+  bisou"], 10087], [["bisou bisou bisoubisou bisou"], 747], [["bisou bisou bisou bisoubisou"],
+  747], [["bisou bisoubisou bisou bisou"], 746], [["bisoubisou bisou bisou bisou"],
+  744]], "5": [[["bisou bisou bisou bisou bisou"], 9313], [["bisou bisou bisou bisoubisou
+  bisou"], 747], [["bisou bisou bisoubisou bisou bisou"], 746], [["bisou bisou bisou
+  bisou bisoubisou"], 746], [["bisou bisoubisou bisou bisou bisou"], 744]]}'
