--- a/reports/mono-2.0/HPLT-v2-cjk_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-cjk_Latn.yaml
@@ -19,7 +19,7 @@ docs_segments: '[[1, 22], [2, 21], [3, 43], [4, 32], [5, 10], [6, 14], [7, 43], 
   1]]'
 docs_segments_mean: 31
 docs_segments_median: 20
-docs_timestamp: 1730820598.8772645
+docs_timestamp: 1733260830.050286
 docs_top100_domains: '[["jw.org", 1051], ["globalrecordings.net", 20], ["unicode.org",
   18], ["bible.is", 11], ["contafrica.org", 9], ["watchtower.org", 9], ["sparkpeople.com",
   8], ["ohchr.org", 8], ["eatmanga.com", 5], ["distance2.com", 4], ["openwebindex.com",
@@ -46,7 +46,7 @@ docs_wds: '[[5, 16], [5.1, 21], [5.2, 16], [5.3, 15], [5.4, 12], [5.5, 18], [5.6
   18], [8.7, 25], [8.8, 23], [8.9, 32], [9, 20], [9.1, 22], [9.2, 15], [9.3, 19],
   [9.4, 28], [9.5, 16], [9.6, 15], [9.7, 12], [9.8, 6]]'
 corpus: cjk_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 2200, "no_urls": 90, "no_bad_encoding":
+hardrules_tags: '{"not_too_long": 359, "not_too_short": 3581, "no_urls": 178, "no_bad_encoding":
   4, "pii": 0}'
 sentence_pairs: 36700
 src_bytes: 7.14 MB
@@ -144,9 +144,18 @@ src_unique_sents: '[[1, 199], [2, 902], [3, 874], [4, 853], [5, 1181], [6, 1004]
   [563, 1], [566, 1], [597, 1], [675, 1], [764, 1], [780, 1], [889, 1], [1344, 1],
   [7687, 1]]'
 srclang: cjk
-timestamp: 1730820649.549896
+timestamp: 1733260863.513544
 unique_sents: 26104
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_cjk_nostopwords
+src_ngrams: '{"1": [[["yehova"], 9174], [["yesu"], 6984], [["nawa"], 6930], [["kaha"],
+  6844], [["mu"], 6281]], "2": [[["vyuma muka"], 1124], [["mwomwo ika"], 913], [["kaha
+  nawa"], 810], [["mulong wa"], 647], [["yiff yiff"], 597]], "3": [[["yiff yiff yiff"],
+  595], [["chili chili chili"], 396], [["haya myaka yosena"], 238], [["wanangana wa
+  zambi"], 219], [["kakukk kakukk kakukk"], 216]], "4": [[["yiff yiff yiff yiff"],
+  593], [["chili chili chili chili"], 395], [["kakukk kakukk kakukk kakukk"], 213],
+  [["world translation of the"], 133], [["translation of the holy"], 133]], "5": [[["yiff
+  yiff yiff yiff yiff"], 591], [["chili chili chili chili chili"], 394], [["kakukk
+  kakukk kakukk kakukk kakukk"], 210], [["world translation of the holy"], 133], [["translation
+  of the holy scriptures"], 133]]}'
