--- a/reports/mono-2.0/HPLT-v2-fuv_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-fuv_Latn.yaml
@@ -26,7 +26,7 @@ docs_segments: '[[1, 623], [2, 278], [3, 801], [4, 265], [5, 388], [6, 357], [7,
   [505, 1], [546, 1], [561, 1], [1044, 2], [1204, 1]]'
 docs_segments_mean: 17
 docs_segments_median: 10
-docs_timestamp: 1730373098.4517684
+docs_timestamp: 1733263185.4316776
 docs_top100_domains: '[["pulaar.org", 2929], ["bible.is", 941], ["fuutamedia.com",
   512], ["wikipedia.org", 414], ["rfi.fr", 296], ["binndipulaar.com", 271], ["jw.org",
   219], ["lewlewal.com", 214], ["misiide.net", 183], ["wol-children.net", 170], ["iqna.ir",
@@ -70,7 +70,7 @@ docs_wds: '[[5, 67], [5.1, 52], [5.2, 74], [5.3, 61], [5.4, 95], [5.5, 104], [5.
   168], [9.2, 161], [9.3, 151], [9.4, 103], [9.5, 102], [9.6, 109], [9.7, 87], [9.8,
   37], [9.9, 29], [10, 5]]'
 corpus: fuv_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 6833, "no_urls": 1399, "no_bad_encoding":
+hardrules_tags: '{"not_too_long": 3327, "not_too_short": 14995, "no_urls": 1974, "no_bad_encoding":
   6, "pii": 103}'
 sentence_pairs: 133977
 src_bytes: 29.93 MB
@@ -337,9 +337,17 @@ src_unique_sents: '[[0, 1], [1, 881], [2, 1937], [3, 2096], [4, 2746], [5, 2931]
   1], [2698, 1], [2700, 1], [2821, 1], [2873, 1], [2905, 1], [2958, 1], [3757, 1],
   [3822, 1], [4259, 1]]'
 srclang: fuv
-timestamp: 1730373216.7114458
+timestamp: 1733263280.4443426
 unique_sents: 70149
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_fuv_nostopwords
+src_ngrams: '{"1": [[["ki"], 37412], [["\u0257i"], 33858], [["ina"], 32566], [["mum"],
+  31492], [["nder"], 26945]], "2": [[["so tawii"], 4027], [["leydi ndii"], 3485],
+  [["mbii \u0257i"], 2625], [["\u0257i wuri"], 2380], [["nyem \u0257i"], 2223]], "3":
+  [[["hay so tawii"], 917], [["bookara aamadu bah"], 774], [["alaa e sago"], 677],
+  [["fedde \u0253amtaare pulaar"], 593], [["sat mmo nee"], 522]], "4": [[["wuri sat
+  mmo nee"], 361], [["kl kl kl kl"], 350], [["teeco taar raa ki"], 327], [["taar teeco
+  taar raa"], 314], [["taa\u0257 taar teeco taar"], 299]], "5": [[["kl kl kl kl kl"],
+  345], [["taar teeco taar raa ki"], 301], [["taa\u0257 taar teeco taar raa"], 299],
+  [["fedde \u0253amtaare pulaar e muritani"], 290], [["\u0257i ba mo a nyem"], 213]]}'
