--- a/reports/mono-2.0/HPLT-v2-run_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-run_Latn.yaml
@@ -97,8 +97,7 @@ docs_wds: '[[5, 3487], [5.1, 3381], [5.2, 3296], [5.3, 3245], [5.4, 3155], [5.5,
   847], [8.9, 741], [9, 691], [9.1, 602], [9.2, 506], [9.3, 373], [9.4, 330], [9.5,
   203], [9.6, 162], [9.7, 111], [9.8, 65], [9.9, 32], [10, 12]]'
 corpus: run_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 90773, "no_urls": 22752, "no_bad_encoding":
-  387, "pii": 2230}'
+hardrules_tags: '{"not_too_long": 9331, "not_too_short": 135575, "no_urls": 24493, "no_bad_encoding": 676,   "pii": 2230}'
 sentence_pairs: 1751899
 src_bytes: 306.26 MB
 src_chars: 314875644
