--- a/reports/mono-1.2/HPLT-v1.2-el.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-el.lite.yaml
@@ -6708,3 +6708,4 @@ srclang: el
 timestamp: 1719718133.8908083
 unique_sents: 381587060
 warnings: []
+hardrules_tags: '{"not_too_long": 8605900, "not_too_short": 978726147, "no_urls": 55274452, "no_bad_encoding": 51577}'
