Updated reports for Norwegian (Nynorsk)

--- a/reports/mono-1.2/HPLT-v1.2-nn.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-nn.yaml
@@ -239,8 +239,7 @@ docs_wds: '[[0.0, 6219], [0.1, 1258], [0.2, 1030], [0.3, 718], [0.4, 695], [0.5,
   1721], [8.5, 1423], [8.6, 1337], [8.7, 1061], [8.8, 1058], [8.9, 842], [9.0, 801],
   [9.1, 699], [9.2, 542], [9.3, 461], [9.4, 320], [9.5, 243], [9.6, 148], [9.7, 76],
   [9.8, 37], [9.9, 7], [10.0, 2]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 10752036, "no_urls": 667864,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 95180, "not_too_short": 10752616, "no_urls": 666883, "no_bad_encoding": 347}'
 monocleaner_scores: '[[0.0, 1218314], [0.1, 941069], [0.2, 1636402], [0.3, 2379821],
   [0.4, 4235573], [0.5, 4749250], [0.6, 4840923], [0.7, 5983876], [0.8, 2551991],
   [0.9, 250026]]'
