--- a/reports/mono-2.0/HPLT-v2-nno_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-nno_Latn.yaml
@@ -211,8 +211,7 @@ docs_wds: '[[5, 18309], [5.1, 18585], [5.2, 19147], [5.3, 18627], [5.4, 20172], 
   15300], [9.2, 12706], [9.3, 10626], [9.4, 9375], [9.5, 8267], [9.6, 7625], [9.7,
   4899], [9.8, 2791], [9.9, 1001], [10, 194]]'
 corpus: nno_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 1831419, "no_urls": 871840,
-  "no_bad_encoding": 1808, "pii": 185082}'
+hardrules_tags: '{"not_too_long": 389346, "not_too_short": 4007791, "no_urls": 914754, "no_bad_encoding": 1808,   "pii": 185082}'
 sentence_pairs: 34603343
 src_bytes: 5.12 GB
 src_chars: 5371043855
