--- a/reports/mono-1.2/HPLT-v1.2-sk.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-sk.lite.yaml
@@ -2861,3 +2861,4 @@ srclang: sk
 timestamp: 1717914191.2787561
 unique_sents: 125575332
 warnings: []
+hardrules_tags: '{"not_too_long": 1468778, "not_too_short": 245840030, "no_urls": 17401306, "no_bad_encoding": 14565}'
