Updated reports for Esperanto

--- a/reports/mono-1.2/HPLT-v1.2-eo.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-eo.yaml
@@ -232,8 +232,7 @@ docs_wds: '[[0.0, 1605], [0.1, 95], [0.2, 88], [0.3, 82], [0.4, 63], [0.5, 87], 
   [8.2, 1209], [8.3, 1115], [8.4, 1090], [8.5, 1059], [8.6, 1090], [8.7, 1053], [8.8,
   1071], [8.9, 1012], [9.0, 920], [9.1, 903], [9.2, 812], [9.3, 807], [9.4, 765],
   [9.5, 636], [9.6, 565], [9.7, 423], [9.8, 261], [9.9, 111], [10.0, 27]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 3717440, "no_urls": 168734,
-  "no_bad_encoding": 10545}'
+hardrules_tags: '{"not_too_long": 39625, "not_too_short": 3717008, "no_urls": 168961, "no_bad_encoding": 10971}'  
 monocleaner_scores: '[[0.0, 892759], [0.1, 304574], [0.2, 430149], [0.3, 672924],
   [0.4, 945747], [0.5, 1227661], [0.6, 1305447], [0.7, 1432056], [0.8, 1363257], [0.9,
   213702]]'
