--- a/reports/mono-2.0/HPLT-v2-vec_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-vec_Latn.yaml
@@ -120,8 +120,7 @@ docs_wds: '[[5, 3673], [5.1, 3206], [5.2, 3064], [5.3, 2807], [5.4, 2695], [5.5,
   [8.9, 814], [9, 451], [9.1, 492], [9.2, 286], [9.3, 262], [9.4, 192], [9.5, 196],
   [9.6, 165], [9.7, 93], [9.8, 6], [9.9, 18]]'
 corpus: vec_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 192637, "no_urls": 29364, "no_bad_encoding":
-  175, "pii": 2800}'
+hardrules_tags: '{"not_too_long": 20447, "not_too_short": 211343, "no_urls": 29371, "no_bad_encoding": 190,   "pii": 2800}'
 sentence_pairs: 1578812
 src_bytes: 210.64 MB
 src_chars: 216477126
