Updated reports for Tigrinya

--- a/reports/mono-2.0/HPLT-v2-tir_Ethi.yaml
+++ b/reports/mono-2.0/HPLT-v2-tir_Ethi.yaml
@@ -95,8 +95,7 @@ docs_wds: '[[5, 1300], [5.1, 1259], [5.2, 1104], [5.3, 1006], [5.4, 933], [5.5, 
   1753], [8.3, 1452], [8.4, 1182], [8.5, 985], [8.6, 922], [8.7, 834], [8.8, 833],
   [8.9, 768], [9, 782], [9.1, 666], [9.2, 530], [9.3, 470], [9.4, 411], [9.5, 312],
   [9.6, 308], [9.7, 180], [9.8, 98], [9.9, 36], [10, 7]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 76656, "no_urls": 8791, "no_bad_encoding":
-  74, "pii": 2128}'
+hardrules_tags: '{"not_too_long": 7979, "not_too_short": 97661, "no_urls": 8881, "no_bad_encoding": 74,  "pii": 2128}'
 sentence_pairs: 1128087
 src_bytes: 434.15 MB
 src_chars: 180568832
