--- a/reports/mono-2.0/HPLT-v2-kac_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-kac_Latn.yaml
@@ -74,8 +74,7 @@ docs_wds: '[[5, 75], [5.1, 62], [5.2, 76], [5.3, 67], [5.4, 85], [5.5, 52], [5.6
   [9.2, 93], [9.3, 133], [9.4, 88], [9.5, 75], [9.6, 86], [9.7, 76], [9.8, 43], [9.9,
   21], [10, 1]]'
 corpus: kac_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 14509, "no_urls": 2617, "no_bad_encoding":
-  6, "pii": 262}'
+hardrules_tags: '{"not_too_long": 2936, "not_too_short": 22234, "no_urls": 2689, "no_bad_encoding": 7 ,  "pii": 262}'
 sentence_pairs: 159416
 src_bytes: 27.31 MB
 src_chars: 28248636
