--- a/reports/mono-1.2/HPLT-v1.2-ml.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ml.yaml
@@ -288,8 +288,7 @@ docs_wds: '[[0.0, 47628], [0.1, 539], [0.2, 760], [0.3, 832], [0.4, 774], [0.5, 
   8771], [8.5, 8089], [8.6, 7303], [8.7, 6802], [8.8, 6606], [8.9, 5630], [9.0, 4958],
   [9.1, 4168], [9.2, 3430], [9.3, 2697], [9.4, 2045], [9.5, 1439], [9.6, 966], [9.7,
   629], [9.8, 326], [9.9, 108], [10.0, 21]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 22750740, "no_urls": 735734,
-  "no_bad_encoding": 5703}'
+hardrules_tags: '{"not_too_long": 300113, "not_too_short": 22751707, "no_urls": 733409, "no_bad_encoding": 4106}'  
 monocleaner_scores: '[[0.0, 3112892], [0.1, 1094813], [0.2, 2407831], [0.3, 4660998],
   [0.4, 5360877], [0.5, 8237340], [0.6, 8963211], [0.7, 11344189], [0.8, 9992060],
   [0.9, 1859482]]'
