Updated reports for Macedonian

--- a/reports/mono-1.2/HPLT-v1.2-mk.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-mk.yaml
@@ -251,8 +251,7 @@ docs_wds: '[[0.0, 11018], [0.1, 270], [0.2, 266], [0.3, 293], [0.4, 341], [0.5, 
   [8.2, 12302], [8.3, 10518], [8.4, 8668], [8.5, 7810], [8.6, 6857], [8.7, 6571],
   [8.8, 5850], [8.9, 5543], [9.0, 4747], [9.1, 3963], [9.2, 3385], [9.3, 2826], [9.4,
   2326], [9.5, 1926], [9.6, 1453], [9.7, 1101], [9.8, 624], [9.9, 255], [10.0, 60]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 40578124, "no_urls": 1206656,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 175165, "not_too_short": 40575109, "no_urls": 1205352, "no_bad_encoding": 375}'
 monocleaner_scores: '[[0.0, 3648670], [0.1, 1065075], [0.2, 1357948], [0.3, 2619592],
   [0.4, 4167170], [0.5, 8441304], [0.6, 10937899], [0.7, 15189108], [0.8, 21454973],
   [0.9, 17307991]]'
