--- a/reports/mono-2.0/HPLT-v2-crh_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-crh_Latn.yaml
@@ -107,8 +107,7 @@ docs_wds: '[[5, 1042], [5.1, 930], [5.2, 966], [5.3, 834], [5.4, 1014], [5.5, 10
   [8.9, 2261], [9, 2387], [9.1, 2484], [9.2, 2034], [9.3, 1400], [9.4, 1073], [9.5,
   880], [9.6, 838], [9.7, 624], [9.8, 417], [9.9, 142], [10, 37]]'
 corpus: crh_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 67429, "no_urls": 15500, "no_bad_encoding":
-  999, "pii": 1158}'
+hardrules_tags: '{"not_too_long": 20598, "not_too_short": 122207, "no_urls": 17212, "no_bad_encoding": 1010, "pii": 1158}'
 sentence_pairs: 1380903
 src_bytes: 301.82 MB
 src_chars: 279816188
